# prayer-alarm-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.mac.yml  docker-compose.rpi.yml  rpi.Dockerfile
.github/workflows/: CD.yaml
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
src/: data.rs  lib.rs  main.rs  structs.rs
