[package]
name = "prayer-alarm"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
islam = "0.1.5"
rodio = "0.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
