[package]
name = "prayer-alarm"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.6.1"
chrono = "0.4.22"
crossbeam-channel = "0.5.6"
once_cell = "1.16.0"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "blocking", "json"] }
rodio = "0.16.0"
rust-embed = "6.4.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
